--- a/projects/home-page/home-page.component.scss
+++ b/projects/home-page/home-page.component.scss
@@ -7,7 +7,7 @@
   background: rgba(191, 191, 191, 0.7);
   padding-bottom: 15px;
   margin: 0 auto;
-  border: 1px solid $border;
+  border: 1px solid $light-grey;
   border-radius: 5px;
 }
 
