footer and title

--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -1,1 +1,48 @@
-<p>home-page works!</p>
+<div id="profile" class="center-row">
+  <h1>Autobiography</h1>
+  <p>Hello, I am Elijah Townsend and I am a Front-End Developer with over 8 years of professional experience. I focus on the user, minimalism, interactivity and functionality. When I am not designing or developing, I am riding long distances on my bike or reading about adventure. Explore my portfolio and contact me with any projects you want help with!</p>
+
+      <div class="social-icons">
+        <a href="https://dribbble.com/ElijahTownsend" target="_blank" class="fa fa-dribbble"></a>
+        <a href="https://www.linkedin.com/in/elijah-townsend-55017b50" target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://www.instagram.com/elijahtownsend/" target="_blank" class="fa fa-instagram"></a>
+        <a href="https://www.behance.net/est1992" target="_blank" class="fa fa-behance"></a>
+        <a href="https://github.com/eli-townsend" target="_blank" class="fa fa-github"></a>
+      </div>
+</div>
+
+        <div class="nbreak clear-fix"></div>
+
+<div id="desktop-section">
+<h1 class="center">Featured - Winston Theme</h1>
+<div id="desktop">
+<ul class="desktop-circles">
+  <li class="circular-corner" style="background:#ee6b5f;"></li>
+  <li class="circular-corner" style="background:#f6bf4f;"></li>
+  <li class="circular-corner" style="background:#60c655;"></li>
+</ul>
+    <div class="video">
+        <video class="thevideo" preload="auto" autoplay loop="loop">
+          <source src="img/winston-theme.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="video-overlay">
+          <a href="winston.html">See More</a>
+        </div>
+    </div>
+</div>
+<a href="workshop.html" class="left-vert button"><i class="fa fa-long-arrow-left fa-3" aria-hidden="true"></i> Visit Workshop</a>
+<a href="journal.html" class="right-vert button"><i class="fa fa-long-arrow-left fa-3" aria-hidden="true"></i> View Journal</a>
+</div>
+
+<div class="sbreak clear-fix"></div>
+<div id="contact" class="center-row">
+<div class="contact-info">
+  Will Work For Food<br/>
+  Elijah Townsend<br/>
+  (828) 773-9730<br/>
+  <a href="mailto:info@established1992.com">info@established1992.com</a>
+</div>
+</div>
+
+<div class="sbreak"></div>
