--- a/projects/home-page/home-page.component.scss
+++ b/projects/home-page/home-page.component.scss
@@ -2,7 +2,7 @@
 
 #desktop {
   height: auto;
-  width: 100%;
+  width: $est-percent-100;
   max-width: 600px;
   background: rgba(191, 191, 191, 0.7);
   padding-bottom: 15px;
