--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <app-est-header></app-est-header>
 
 <div class="container">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+
+  <div class="cross">
+    <img src="../../assets/images/cross.svg" alt="cross"/>
+  </div>
 </div>
 
 <app-est-footer></app-est-footer>
