--- a/src/app/est-footer/est-footer.component.html
+++ b/src/app/est-footer/est-footer.component.html
@@ -1,7 +1,5 @@
-<div class="cross">
-    <img src="../../assets/images/cross.svg" alt="cross"/>
-</div>
-
 <footer>
-    &copy; Established 1992.
+  <div class="footer">
+      &copy; Established 1992.
+  </div>
 </footer>
