--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@ body {
   float: none;
   margin: 0;
   background: url(../src/assets/images/tree_bark.png);
+  color: $light-grey;
   font-family: gt_walsheim_regular;
   word-wrap: break-word;
 }
