--- a/src/app/est-footer/est-footer.component.html
+++ b/src/app/est-footer/est-footer.component.html
@@ -1,5 +1,9 @@
 <footer>
-  <div class="footer">
+  <div class="copy">
       &copy; Established 1992.
+  </div>
+
+  <div class="cross">
+    <img src="../../assets/images/cross.svg" alt="cross"/>
   </div>
 </footer>
