active nav class

--- a/src/app/est-header/est-header.component.html
+++ b/src/app/est-header/est-header.component.html
@@ -12,7 +12,7 @@
 
 <div *ngIf="navShow" class="main-navigation" [ngClass]="{'open' : navShow}">
   <div class="nav-links">
-        <a routerLink="/home" class="active-nav-selection">Home</a>
+        <a routerLink="/home" routerLinkActive="active-nav-selection">Home</a>
         <a>Workshop</a>
         <a>Journal</a>
   </div>
