journal page created

--- a/src/app/est-header/est-header.component.html
+++ b/src/app/est-header/est-header.component.html
@@ -12,8 +12,8 @@
 
 <div *ngIf="navShow" class="main-navigation" [ngClass]="{'open' : navShow}">
   <div class="nav-links">
-        <a routerLink="/home" routerLinkActive="active-nav-selection">Home</a>
-        <a>Workshop</a>
-        <a>Journal</a>
+    <a routerLink="/home" routerLinkActive="active-nav-selection">Home</a>
+    <a>Workshop</a>
+    <a routerLink="/journal" routerLinkActive="active-nav-selection">Journal</a>
   </div>
 </div>
