404 content and dynamic footer

--- a/projects/page-not-found/page-not-found.component.html
+++ b/projects/page-not-found/page-not-found.component.html
@@ -1,2 +1,10 @@
-<h2>Page Not Found</h2>
-<p>We couldn't find that page! Not even with x-ray vision.</p>
+<div class="center-row">
+  <h1>Oops! It's not me, it's you</h1>
+  <p>It appears that there was a problem with the page you are looking for. Let's agree that it was neither of our faults. Regardless, here is a link to a store for clothes you should buy.</p>
+
+  <div class="nbreak"></div>
+
+  <a href="https://est1992designs.com/" class="secondary button" target="_blank">
+    Est.1992 Designs
+  </a>
+</div>
