--- a/src/app/est-footer/est-footer.component.scss
+++ b/src/app/est-footer/est-footer.component.scss
@@ -4,15 +4,20 @@ footer{
   justify-content: center;
   align-items: center;
   min-width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .copy {
   text-align: center;
-  flex: 1;
-  margin-left: 48px;
+  // flex: 1 0;
+  //margin-left: 48px;
 }
 
 .cross {
   font-family: fantasy;
   font-size: 24px;
+  margin-left: auto;
+  margin-right: 50px;
+  margin-bottom: 24px;
 }
