--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@ body {
   color: $light-grey;
   font-family: gt_walsheim_regular;
   word-wrap: break-word;
+  height: 100%;
 }
 
 .container {
@@ -35,7 +36,7 @@ body {
   margin: 0 auto;
   padding: 1em;
   width: $est-percent-100;
-  height: auto;
+  min-height: calc(100vh - 2em);
 }
 
 
