blog blurb component

--- a/src/app/est-footer/est-footer.component.html
+++ b/src/app/est-footer/est-footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
   <div class="copy">
       &copy; Established 1992.
   </div>
@@ -6,4 +6,4 @@
   <div class="cross">
     <img src="../../assets/images/cross.svg" alt="cross"/>
   </div>
-</footer>
+</footer> -->
