--- a/projects/journal/journal.component.html
+++ b/projects/journal/journal.component.html
@@ -6,36 +6,32 @@
 
 <div class="row">
   <div class="twelve columns">
-    <div class="blog-post">
-      <h2>Future Proof Your Company <span class="blog-date">March 27, 2020</span></h2>
+    <est-blog-blurb
+      blogTitle="Future Proof Your Company"
+      blogDate="March 27, 2020"
+      blogBlurb="Not even five years ago I was designing mobile-first applications with the idea"
+      blogLink="blog/work-remote.html"
+    ></est-blog-blurb>
 
-      <p>Not even five years ago I was designing mobile-first applications with the idea......</p>
-
-      <a href="blog/work-remote.html" class="secondary button">Read More</a>
-    </div>
-
-    <div class="blog-post">
-      <h2>Flexbox Responsive Navigation <span class="blog-date">October 16, 2017</span></h2>
-
-      <p>This is a story all about how my life got flipped turned upside down … Actually, it is not. This post is.....</p>
-
-      <a href="blog/flex-box.html" class="secondary button">Read More</a>
-    </div>
-
-    <div class="blog-post">
-      <h2>Border-Left: Required; <span class="blog-date">August 8, 2017</span></h2>
-
-      <p>Using Border-Left to display required, success and errors Have you ever viewed a website with chicken pox?.....</p>
-
-      <a href="blog/border-left.html" class="secondary button">Read More</a>
-    </div>
-
-    <div class="blog-post">
-      <h2>Code For Winston-Salem <span class="blog-date">July 19, 2017</span></h2>
-
-      <p>As my friend and I started the organization Code For Winston Salem, I created a logo.....</p>
-      
-      <a href="blog/code-for-ws.html" class="secondary button">Read More</a>
-    </div>
+    <est-blog-blurb
+      blogTitle="Flexbox Responsive Navigation"
+      blogDate="October 16, 2017"
+      blogBlurb="This is a story all about how my life got flipped turned upside down … Actually, it is not. This post is"
+      blogLink="blog/work-remote.html"
+    ></est-blog-blurb>
+    
+    <est-blog-blurb
+      blogTitle="Border-Left: Required;"
+      blogDate="August 8, 2017"
+      blogBlurb="Using Border-Left to display required, success and errors Have you ever viewed a website with chicken pox?"
+      blogLink="blog/work-remote.html"
+    ></est-blog-blurb>
+    
+    <est-blog-blurb
+      blogTitle="Code For Winston-Salem"
+      blogDate="July 19, 2017"
+      blogBlurb="As my friend and I started the organization Code For Winston Salem, I created a logo"
+      blogLink="blog/work-remote.html"
+    ></est-blog-blurb>
   </div>
 </div>
