--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -1,48 +1,28 @@
-<div id="profile" class="center-row">
-  <h1>Autobiography</h1>
-  <p>Hello, I am Elijah Townsend and I am a Front-End Developer with over 8 years of professional experience. I focus on the user, minimalism, interactivity and functionality. When I am not designing or developing, I am riding long distances on my bike or reading about adventure. Explore my portfolio and contact me with any projects you want help with!</p>
+<h1 class="mi-nombre">Elijah Townsend</h1>
+<img src="../../assets/images/mountains.jpg" alt="elijah in colorado" class="foto-de-viaje">
 
-      <div class="social-icons">
-        <a href="https://dribbble.com/ElijahTownsend" target="_blank" class="fa fa-dribbble"></a>
-        <a href="https://www.linkedin.com/in/elijah-townsend-55017b50" target="_blank" class="fa fa-linkedin"></a>
-        <a href="https://www.instagram.com/elijahtownsend/" target="_blank" class="fa fa-instagram"></a>
-        <a href="https://www.behance.net/est1992" target="_blank" class="fa fa-behance"></a>
-        <a href="https://github.com/eli-townsend" target="_blank" class="fa fa-github"></a>
-      </div>
-</div>
+<h2>Good <span>morning</span>! I am a technical product designer and a ultra endurance cyclist who goes by the name of Elijah Townsend. My mission is to turn creative ideas into user centered experiences.</h2>
 
-        <div class="nbreak clear-fix"></div>
+<h3 class="donde-esta">Where are you now?</h3>
 
-<div id="desktop-section">
-<h1 class="center">Featured - Winston Theme</h1>
-<div id="desktop">
-<ul class="desktop-circles">
-  <li class="circular-corner" style="background:#ee6b5f;"></li>
-  <li class="circular-corner" style="background:#f6bf4f;"></li>
-  <li class="circular-corner" style="background:#60c655;"></li>
-</ul>
-    <div class="video">
-        <video class="thevideo" preload="auto" autoplay loop="loop">
-          <source src="img/winston-theme.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class="video-overlay">
-          <a href="winston.html">See More</a>
-        </div>
-    </div>
-</div>
-<a href="workshop.html" class="left-vert button"><i class="fa fa-long-arrow-left fa-3" aria-hidden="true"></i> Visit Workshop</a>
-<a href="journal.html" class="right-vert button"><i class="fa fa-long-arrow-left fa-3" aria-hidden="true"></i> View Journal</a>
-</div>
+<h3>I currently work at <a href="https://www.truist.com/" target="_blank">Truist</a>, the bank that formed due to BB&amp;T and Suntrust merger, as a Senior Experience Designer. We have been working hard to create a better interaction for our clients to their money. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2021.pdf" target="_blank" role="button">explore my resume</a>.</h3>
 
-<div class="sbreak clear-fix"></div>
-<div id="contact" class="center-row">
-<div class="contact-info">
-  Will Work For Food<br/>
+<h4 class="bicicletas">Bicycles</h4>
+
+<img src="../../assets/images/colorado-crit.jpg" alt="elijah racing a crit" class="foto-de-bicicletas">
+
+<h4>Outside of work, my faith, my family and cycling are my main focuses. I use the bike as a mode of transportaion but also as my therapist. The bike is a great way to challenge yourself but also a means to explore in a timely manner. Checkout my cycling project <a href="https://www.whatiscycling.com/" target="_blank">What Is Cycling</a>. This project is a multi episode video series featuring individuals from the cycling community, showcasing the different types of cyclists and reasons for riding that bring us together.</h4>
+
+<h5 class="contacto">Will Work For Food</h5>
+
+<div class="datos-de-contacto" role="list">
   Elijah Townsend<br/>
-  (828) 773-9730<br/>
-  <a href="mailto:info@established1992.com">info@established1992.com</a>
+  <a href="tel:828-773-9730" role="listitem">(828) 773-9730</a><br/>
+  <a href="mailto:info@established1992.com?subject=Holla at me!" role="listitem">info@established1992.com</a><br/>
+  <a href="https://www.behance.net/est1992" target="_blank" role="listitem">behance</a><br/>
+  <a href="https://dribbble.com/ElijahTownsend" target="_blank" role="listitem">dribbble</a><br/>
+  <a href="https://github.com/eli-townsend" target="_blank" role="listitem">github</a><br/>
+  <a href="https://www.linkedin.com/in/elijah-townsend-55017b50" target="_blank" role="listitem">linkedIn</a><br/>
+  <a href="https://www.instagram.com/elijahtownsend/" target="_blank" role="listitem">instagram</a><br/>
+  <a href="https://www.youtube.com/channel/UCQdGEVHOpor7xQ-HyLRFY5A" target="_blank" role="listitem">youtube</a>
 </div>
-</div>
-
-<div class="sbreak"></div>
