--- a/src/app/est-header/est-header.component.scss
+++ b/src/app/est-header/est-header.component.scss
@@ -9,7 +9,7 @@
   .site-title {
     font-size: 1.3rem;
     font-weight: 600;
-    color: $base;
+    color: $black;
     padding-top: 10px;
     padding-left: 16px;
   }
@@ -35,7 +35,7 @@
       position: absolute;
       height: 3px;
       width: $est-percent-100;
-      background: $base;
+      background: $black;
       border-radius: 9px;
       opacity: 1;
       left: 0;
