blog article components

--- a/projects/est-components/blog-blurb/blog-blurb.component.html
+++ b/projects/est-components/blog-blurb/blog-blurb.component.html
@@ -3,5 +3,5 @@
 
   <p>{{blogBlurb}}...</p>
 
-  <a href="{{blogLink}}" class="secondary button" role="button">Read More</a>
+  <a [routerLink]="'{{blogLink}}'" class="secondary button" role="button">Read More</a>
 </div>
