--- a/projects/journal/journal.component.html
+++ b/projects/journal/journal.component.html
@@ -6,14 +6,14 @@
       blogTitle="Future Proof Your Company"
       blogDate="March 27, 2020"
       blogBlurb="Not even five years ago I was designing mobile-first applications with the idea"
-      blogLink="work-remote.html"
+      blogLink="/journal/journal-post/work-remote.html"
     ></est-blog-blurb>
 
     <est-blog-blurb
       blogTitle="Flexbox Responsive Navigation"
       blogDate="October 16, 2017"
       blogBlurb="This is a story all about how my life got flipped turned upside down … Actually, it is not. This post is"
-      blogLink="flexbox-nav.html"
+      blogLink="journal/journal-post/flexbox-nav.html"
     ></est-blog-blurb>
     
     <est-blog-blurb
