removing old old styles

--- a/projects/est-components/blog-blurb/blog-blurb.component.scss
+++ b/projects/est-components/blog-blurb/blog-blurb.component.scss
@@ -1,9 +1,9 @@
 .blog-post{
   margin-bottom: 80px;
-}
-
-.blog-post > p{
-    margin-bottom: 30px;
+  
+  > p{
+      margin-bottom: 30px;
+  }
 }
 
 span.blog-date{
