--- a/src/app/est-header/est-header.component.html
+++ b/src/app/est-header/est-header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <a (click)="navToggle()">
+    <a (click)="navToggle()" class="hamburguesa">
         <div class="res-nav" [ngClass]="{'open' : navShow}">
             <span></span>
             <span></span>
